2015-10-04 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/mod_rivet.c: moving Rivet_ProcessorCleanup in 
    mod_rivet_common.c
    * src/mod_rivet/mod_rivet.h: add exit status code to
    thread private data
    * src/mod_rivet/mod_rivet_common.c: Rivet_ProcessorCleanup now
    in this file
    * src/mod_rivet/rivet_worker_mpm.c: thread exit handling
    now calling the finalize handling function. Functions naming
    scheme reformed. Since the exit_thread command forces
    the whole child process to exit the check on the thread
    counter in the supervisor thread was changed as the thread
    executing thread_exit brings about can't exit before
    the supervisor itself terminates
    * src/mod_rivet/rivet_prefork_mpm.c: function naming scheme
    changed.

2015-09-04 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/rivet_prefork_mpm.c: fix message severity
    in finalize method
    * src/mod_rivet/rivet_worker_mpm.c: passing actual error
    code to log message if thread join fails

2015-08-30 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/mod_rivet.c: bringing the request type check
    back to Rivet_Handler shook quite a bit the build process as
    it required to create a new file rivet_types.h to store
    various definitions 
    * src/mod_rivet/TclWebapache.c: changed definition of
    TclWeb_InitRequest. The thread private data must have
    stored the whole request processing status
    * src/mod_rivet/rivet_prefork_mpm.c: Request type check moved
    to mod_rivet.c (Rivet_Handler)
    * src/mod_rivet/rivet_worker_mpm.c: Request type stored
    now in the request private data
    * src/parser/parsePkgInit.c: was still including config.h
    instead rivet_config.h. Add mandatory Apache standard 
    copyright statement
    * src/mod_rivet/mod_rivet_common.c: Rivet_CheckType 
    definition changed to return a rivet_req_ctype value
    * src/mod_rivet/rivet_types.h: add new file with